feat(database): implement PostgreSQL schema with Drizzle ORM
- Add complete database schema with 15 tables (database/schema.ts)
- Configure Drizzle ORM with PostgreSQL adapter
- Add Docker Compose for local PostgreSQL development
- Create database connection utilities with health check
- Add migration system with initial schema migration
- Update shared types with comprehensive TypeScript definitions
- Add setup script for environment variables
- Update README with database setup instructions
- Update ARCHITECTURE_SUMMARY with implementation status

Tables implemented:
- organizations, organization_hierarchy
- roles, individuals, role_occupancy
- users, user_trust_scores
- reports, report_links, votes
- media, ai_verification
- content_reports, ban_history, pow_challenges

New scripts:
- bun run setup: Generate .env files
- bun run docker:up/down/reset: Manage PostgreSQL container
- bun run db:push/generate/studio: Database management

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Decentralized, anonymous platform for exposing government injustices in Iran",
-  "workspaces": ["frontend", "backend", "shared"],
+  "workspaces": ["frontend", "backend", "shared", "database"],
   "scripts": {
     "dev": "bun scripts/dev.ts",
     "dev:frontend": "bun --cwd frontend run dev",
@@ -18,6 +18,15 @@
     "test": "bun --cwd frontend run test && bun --cwd backend run test",
     "test:frontend": "bun --cwd frontend run test",
     "test:backend": "bun --cwd backend run test",
+    "db:generate": "bun --cwd database run generate",
+    "db:migrate": "bun --cwd database run migrate",
+    "db:push": "bun --cwd database run push",
+    "db:studio": "bun --cwd database run studio",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:reset": "docker compose down -v && docker compose up -d",
+    "docker:logs": "docker compose logs -f",
+    "setup": "bun scripts/setup-env.ts",
     "clean": "rm -rf frontend/.next frontend/node_modules backend/dist backend/node_modules shared/node_modules node_modules",
     "prepare": "echo 'Ready to develop!'"
   },
