--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,23 @@
     "format": "biome format --write .",
     "type-check": "tsc --noEmit",
     "test": "echo 'No tests configured yet' && exit 0",
-    "test:watch": "echo 'No tests configured yet' && exit 0"
+    "test:watch": "echo 'No tests configured yet' && exit 0",
+    "db:migrate": "bun src/db/migrate.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "drizzle-orm": "^0.45.1",
+    "express": "^4.18.2",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "@types/pg": "^8.16.0",
+    "drizzle-kit": "^0.31.8",
     "typescript": "^5.3.3"
   }
 }
