--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "workspaces": ["frontend", "backend", "shared", "database"],
   "scripts": {
     "dev": "bun scripts/dev.ts",
-    "dev:frontend": "bun --cwd frontend run dev",
-    "dev:backend": "bun --cwd backend run dev",
-    "build": "bun --cwd frontend run build && bun --cwd backend run build",
-    "build:frontend": "bun --cwd frontend run build",
-    "build:backend": "bun --cwd backend run build",
+    "dev:frontend": "bun run --filter frontend dev",
+    "dev:backend": "bun run --filter backend dev",
+    "build": "bun run --filter frontend build && bun run --filter backend build",
+    "build:frontend": "bun run --filter frontend build",
+    "build:backend": "bun run --filter backend build",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "type-check": "bun --cwd frontend run type-check && bun --cwd backend run type-check",
-    "test": "bun --cwd frontend run test && bun --cwd backend run test",
-    "test:frontend": "bun --cwd frontend run test",
-    "test:backend": "bun --cwd backend run test",
-    "db:generate": "bun --cwd database run generate",
-    "db:migrate": "bun --cwd database run migrate",
-    "db:push": "bun --cwd database run push",
-    "db:studio": "bun --cwd database run studio",
+    "type-check": "bun run --filter frontend type-check && bun run --filter backend type-check",
+    "test": "bun run --filter frontend test && bun run --filter backend test",
+    "test:frontend": "bun run --filter frontend test",
+    "test:backend": "bun run --filter backend test",
+    "db:generate": "bun run --filter database generate",
+    "db:migrate": "bun run --filter backend db:migrate",
+    "db:push": "bun run --filter database push",
+    "db:studio": "bun run --filter database studio",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
     "docker:reset": "docker compose down -v && docker compose up -d",
