--- a/backend/package.json
+++ b/backend/package.json
@@ -16,18 +16,33 @@
     "db:migrate": "bun src/db/migrate.ts"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.45.1",
     "express": "^4.18.2",
-    "postgres": "^3.4.7"
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "postgres": "^3.4.7",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.17",
     "@types/pg": "^8.16.0",
+    "@types/uuid": "^11.0.0",
     "drizzle-kit": "^0.31.8",
     "typescript": "^5.3.3"
   }
