--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,24 +24,24 @@ services:
       timeout: 5s
       retries: 5
 
-  # Redis for sessions and rate limiting (optional, uncomment when needed)
-  # redis:
-  #   image: redis:7-alpine
-  #   container_name: daadaar-redis
-  #   restart: unless-stopped
-  #   ports:
-  #     - "6379:6379"
-  #   volumes:
-  #     - redis_data:/data
-  #   healthcheck:
-  #     test: ["CMD", "redis-cli", "ping"]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
+  # Redis for sessions and rate limiting
+  redis:
+    image: redis:7-alpine
+    container_name: daadaar-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
     driver: local
-  # redis_data:
-  #   driver: local
+  redis_data:
+    driver: local
 
