--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "next": "^16.0.0",
+    "next-intl": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next-intl": "^3.0.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
