--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,10 @@
     "db:migrate": "bun src/db/migrate.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
+    "@aws-sdk/s3-request-presigner": "^3.962.0",
+    "@types/multer": "^2.0.0",
+    "@types/sharp": "^0.32.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,9 +28,11 @@
     "express": "^4.18.2",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "postgres": "^3.4.7",
+    "sharp": "^0.34.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
