--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.0",
     "next-intl": "^4.7.0",
     "react": "^19.0.0",
