feat: Add Slack notifications for key events
Added Slack notifications for:
- New User Registration
- New Incident Reports
- New Individuals
- New Organizations
- Content Reports (Abuse/Moderation)

Created a new  utility to handle webhook requests.

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,8 @@ SESSION_SECRET=your-super-secret-session-key-change-in-production
 # Encryption
 # -----------------------------------------------------------------------------
 ENCRYPTION_KEY=your-encryption-key-change-in-production
+
+# -----------------------------------------------------------------------------
+# Slack Notifications
+# -----------------------------------------------------------------------------
+# SLACK_WEBHOOK_URL=https://hooks.slack.com/services/...
