--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "test:watch": "echo 'No tests configured yet' && exit 0"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.6.12",
     "@hookform/resolvers": "^5.2.2",
+    "aws-amplify": "^6.15.9",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "^16.0.0",
@@ -27,6 +29,8 @@
     "zod": "^4.3.4"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.19.0",
+    "@aws-amplify/backend-cli": "^1.8.1",
     "@biomejs/biome": "^1.8.0",
     "@tailwindcss/postcss": "^4.1.0",
     "@types/node": "^20.11.0",
