--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "bun@1.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,9 +15,7 @@
     "test:watch": "echo 'No tests configured yet' && exit 0"
   },
   "dependencies": {
-    "@aws-amplify/adapter-nextjs": "^1.6.12",
     "@hookform/resolvers": "^5.2.2",
-    "aws-amplify": "^6.15.9",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "^16.0.0",
@@ -29,8 +28,6 @@
     "zod": "^4.3.4"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.19.0",
-    "@aws-amplify/backend-cli": "^1.8.1",
     "@biomejs/biome": "^1.8.0",
     "@tailwindcss/postcss": "^4.1.0",
     "@types/node": "^20.11.0",
