--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@/shared/*": ["../shared/*"]
+      "@/shared/*": ["./shared/*"]
     }
   },
   "include": [
@@ -30,5 +30,5 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules", ".next/types/validator.ts"]
+  "exclude": ["amplify/**", "node_modules", ".next/types/validator.ts"]
 }
