--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
     "@tailwindcss/postcss": "^4.1.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20.11.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
