--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "db:migrate": "bun src/db/migrate.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.962.0",
     "@aws-sdk/client-s3": "^3.962.0",
     "@aws-sdk/s3-request-presigner": "^3.962.0",
     "@types/multer": "^2.0.0",
