--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@aws-sdk/s3-request-presigner": "^3.962.0",
     "@types/multer": "^2.0.0",
     "@types/sharp": "^0.32.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
