--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.562.0",
     "next": "^16.0.0",
     "next-intl": "^4.7.0",
+    "posthog-js": "^1.316.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.69.0",
