--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "packageManager": "bun@1.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "bun ../scripts/generate-updates.ts && next build",
     "start": "next start",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
@@ -17,9 +17,11 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.25.0",
     "lucide-react": "^0.562.0",
     "next": "^16.0.0",
     "next-intl": "^4.7.0",
+    "openai": "^6.15.0",
     "posthog-js": "^1.316.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,7 +34,7 @@
     "@biomejs/biome": "^1.8.0",
     "@tailwindcss/postcss": "^4.1.0",
     "@tailwindcss/typography": "^0.5.19",
-    "@types/node": "^20.11.0",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "postcss": "^8.4.33",
