--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "packageManager": "bun@1.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "bun ../scripts/generate-updates.ts && next build",
+    "build": "bun scripts/generate-updates.ts && next build",
     "start": "next start",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
