chore: fix formatting issues

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:frontend": "bun run --filter frontend dev",
     "dev:backend": "bun run --filter backend dev",
     "build": "bun run --filter frontend build && bun run --filter backend build",
-    "build:frontend": "bun run --filter frontend build",
+    "build:frontend": "bun run --filter frontend build && vercel deploy --prod --cwd frontend/ --yes",
     "build:backend": "bun run --filter backend build",
     "deploy:frontend": "bun run --filter frontend deploy:prod",
     "lint": "biome check .",
